--- a/internal/app/drivers/layout.templ
+++ b/internal/app/drivers/layout.templ
@@ -112,15 +112,21 @@ templ layout(props layoutProps) {
 		<body
  			_="
 		    on every htmx:afterRequest
+		      log 'htmx:afterRequest'
 		      if event.detail.successful
-		        then set {hidden: true} on #htmx-alert
+		        if #htmx-alert
+		          then set {hidden: true} on #htmx-alert
+		        end
 		      else if event.detail.failed and event.detail.xhr
-		        then
-		          log `server error: ${event.detail.xhr.status} - ${event.detail.xhr.statusText}`
-		          set {hidden: false, innerText: &#39;Oops, something went wrong with the server...&#39;} on #htmx-alert
+            log `server error: ${event.detail.xhr.status} - ${event.detail.xhr.statusText}`
+            if #htmx-alert
+              then set {hidden: false, innerText: &#39;Oops, something went wrong with the server...&#39;} on #htmx-alert
+            end
 		      else
-		        log `unknown error: ${event.detail}`
-		        set {hidden: false, innerText: &#39;Unexpected error, check your connection and refresh the page&#39;} on #htmx-alert
+		        log 'htmx:afterRequest unknown error'
+		        if #htmx-alert
+		          then set {hidden: false, innerText: &#39;Unexpected error, check your connection and refresh the page&#39;} on #htmx-alert
+		        end
 		      end
 		  "
 		>
